.provarCaches/00D5f000005vwGkEAI/objects/rstkf__jeato__c.object
<CustomObject>
    <description>jeato__c</description>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__jeato_uploadgroup__c &amp;&quot; &quot;&amp; TEXT( rstkf__jeato_date__c ) &amp;&quot; (&quot;&amp;  TEXT(rstkf__jeato_lineno__c) &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_acct__c</fullName>
        <description>Account Number</description>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_batcherror__c</fullName>
        <description>Batch Error</description>
        <label>Batch Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_company__c</fullName>
        <description>Company Number</description>
        <label>Company Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_cramt__c</fullName>
        <description>Credit Amount</description>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_cramtmcurr__c</fullName>
        <description>Credit Amount – Maintenance Currency</description>
        <label>Credit Amount – Maintenance Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_date__c</fullName>
        <description>Journal Date</description>
        <label>Journal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_desc__c</fullName>
        <description>Entry Description</description>
        <label>Entry Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_dimval1__c</fullName>
        <description>Dimension Value 1</description>
        <label>Dimension Value 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_dimval2__c</fullName>
        <description>Dimension Value 2</description>
        <label>Dimension Value 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_dimval3__c</fullName>
        <description>Dimension Value 3</description>
        <label>Dimension Value 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_div__c</fullName>
        <description>Division Number</description>
        <label>Division Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_dramt__c</fullName>
        <description>Debit Amount</description>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_dramtmcurr__c</fullName>
        <description>Debit Amount – Maintenance Currency</description>
        <label>Debit Amount – Maintenance Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_error__c</fullName>
        <description>Upload Error Message</description>
        <label>Upload Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_exchangerate__c</fullName>
        <description>Exchange Rate</description>
        <label>Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL Account</description>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Company</description>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Division</description>
        <label>Financial Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_gljh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Journal Entry</description>
        <label>Journal Entry</label>
        <referenceTo>rstkf__gljh__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Project</description>
        <label>Financial Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_jeno__c</fullName>
        <description>JE Reference Number</description>
        <label>JE Reference Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_linecomment__c</fullName>
        <description>Comment</description>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_lineno__c</fullName>
        <description>Line Number</description>
        <label>Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_maintcurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate Maintenance Currency</description>
        <label>Alternate Maintenance Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person Responsible</description>
        <label>Person Responsible</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_proj__c</fullName>
        <description>Project Number</description>
        <label>Project Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_syforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exchange Rate Schedule</description>
        <label>Exchange Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_uploadgroup__c</fullName>
        <description>Upload Group</description>
        <label>Upload Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__jeato_vatclass__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This field carries the VAT Class associated with the Journal Entry Detail.</inlineHelpText>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Journal Entry Upload Object</relationshipLabel>
        <relationshipName>jeatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Journal Entry Upload Object</label>
    <nameField>
        <label>Journal Entry Upload Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Entry Upload Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>